--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco009/cumco009.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco009/cumco009.component.html
@@ -174,10 +174,10 @@
               <div *ngSwitchCase="2">
                 <p-cellEditor>
                   <ng-template pTemplate="input">
-                    <input type="text" [(ngModel)]="row.id" [disabled]="true">
+                    <input type="text" [(ngModel)]="row.codigo" [disabled]="true">
                   </ng-template>
                   <ng-template pTemplate="output">
-                    {{row.id}}
+                    {{row.codigo}}
                   </ng-template>
                 </p-cellEditor>
               </div>
